I created a Progress Bar class measuring and showing the flight altitude

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>SpeedRocket</title>
     <link rel="stylesheet" href="styles/buttons.css" />
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="/styles/progress-bar.css" />
   </head>
   <body>
     <div class="world" id="reset">
@@ -15,6 +16,11 @@
       </div>
 
       <div class="ground"></div>
+
+      <div class="progress-bar">
+        <div class="progress-bar-fill"></div>
+        <div class="progress-bar-alt"></div>
+      </div>
     </div>
     <div class="bottom-button">
       <button class="button-highscore">
