--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <button class="button" id="button-reset-highscore">RESET</button>
       </div>
     </div>
-    <div class="modal modal-rename" id="modal-4">
+    <div class="modal" id="modal-settings-rocket">
       <div class="modal-content">
         <h1>YOUR NAME</h1>
         <input class="input-rename" id="input-rename" type="text" />
